<resources>
    <string name="app_name">oMoFILMS</string>
    <string name="chercher_un_film">Chercher un film</string>
    <string name="exemple_2015">Exemple : 2015</string>
    <string name="rechercher">Rechercher</string>
    <string name="films">Films</string>
    <string name="genre">Genre</string>
    <string name="nombre_de_recherche">Nombre de recherche :</string>
    <string name="date">Date</string>
    <string name="maximum_50">Maximum : 50</string>
    <string name="retour">Retour</string>
    <string name="resultat_de_recherche">Resultat de recherche</string>
    <string name="poster">poster</string>
    <string name="rechercher_un_film"><u>Rechercher un film</u></string>
    <string name="les_meilleurs_films"><u>Les meilleurs films</u></string>
    <string name="logo_of_omofilms">Logo of oMoFILMS</string>
    <string name="ann_e">Année</string>
    <string name="th_me">Thème</string>
    <string name="mode">Mode</string>
    <string name="exemple_2020">Exemple : 2020</string>
    <string name="vote">Vote</string>
    <string name="popularit">Popularité</string>
    <string name="poster_of_the_film">poster of the film</string>
</resources>